add parameter `site_url`

--- a/app/app/config/parameters.yml.dist
+++ b/app/app/config/parameters.yml.dist
@@ -9,3 +9,6 @@ parameters:
     mailer_user: null
     mailer_password: null
     secret: ThisTokenIsNotSoSecretChangeIt
+
+
+    site_url: http://github.com/
