--- a/app/src/AppBundle/Resources/config/services.yml
+++ b/app/src/AppBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
   kp.film_page_scrap:
     class: AppBundle\Service\FilmPageScrapService
-    arguments: [@doctrine.dbal.default_connection]
+    arguments: [@doctrine.dbal.default_connection, %site_url%]
