move to service

--- a/app/src/AppBundle/Resources/config/services.yml
+++ b/app/src/AppBundle/Resources/config/services.yml
@@ -2,3 +2,7 @@ services:
   kp.film_page_scrap:
     class: AppBundle\Service\FilmPageScrapService
     arguments: [@doctrine.dbal.default_connection, %site_url%]
+
+  kp.cache_structure:
+      class: AppBundle\Service\CacheStructureService
+      arguments: [@doctrine.dbal.default_connection]
