--- a/app/app/config/tables.yml
+++ b/app/app/config/tables.yml
@@ -1,10 +1,10 @@
 parameters:
     tables:
         root:
-            films: s_films
-            names: s_names
+            film: s_films
+            name: s_names
         child:
-            films:
+            film:
                 studio: s_films_studio
                 other: s_films_other
                 dates: s_films_dates
@@ -14,7 +14,7 @@ parameters:
                 tracks: s_films_tracks
                 sites: s_films_sites
                 studio: s_films_studio
-            names:
+            name:
                 relations: s_names_relations
                 awards: s_names_awards
                 sites: s_names_sites
